attempted to fix svg on safari browser issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -610,6 +610,7 @@ template {
   margin-right: auto;
   min-height: 50px;
   max-height: 50px;
+  cursor: pointer;
 }
 
 .outer-shape {
@@ -952,6 +953,7 @@ template {
 .icon {
   margin: 0 20px;
   transition: fill 0.25s ease-out;
+  cursor: pointer;
 }
 
 .icon:hover .outer-shape {
