--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -115,6 +115,7 @@
 .icon {
   margin: 0 20px;
   transition: fill 0.25s ease-out;
+  cursor: pointer;
   &:hover .outer-shape {
     fill: #fff;
   }
