--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -28,6 +28,7 @@
     @include default-image;
     min-height: 50px;
     max-height: 50px;
+    cursor: pointer;
   }
 
 .outer-shape {
